Add github pages

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffe4b5",
-  "background_color": "#ffffe0"
+  "theme_color": "#ffD700",
+  "background_color": "#EEb422"
 }
